--- a/src/main/resources/views/travel/proyectHome.fxml
+++ b/src/main/resources/views/travel/proyectHome.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -37,7 +39,7 @@
       </MenuBar>
       <AnchorPane prefHeight="493.0" prefWidth="600.0">
          <children>
-            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="127.0" layoutY="46.0" style="&#10;" text="Viajes-- renombrar a proyecto" textAlignment="CENTER" textFill="#9a1083" textOverrun="CENTER_ELLIPSIS" wrapText="false">
+            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="334.0" layoutY="8.0" style="&#10;" text="Proyectos" textAlignment="CENTER" textFill="#9a1083" textOverrun="CENTER_ELLIPSIS" wrapText="false">
                <font>
                   <Font name="AdobeHebrew-Regular" size="32.0" />
                </font>
@@ -45,9 +47,14 @@
                   <Bloom threshold="0.95" />
                </effect>
             </Label>
-            <Button layoutX="83.0" layoutY="202.0" mnemonicParsing="false" onAction="#goToNewTravel" prefHeight="89.0" prefWidth="173.0" text="Nuevo Viaje" />
-               <Button layoutX="327.0" layoutY="202.0" mnemonicParsing="false" onAction="#goToFindTravel" prefHeight="89.0" prefWidth="173.0" text="Buscar Viajes" />
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToNewTravel" prefHeight="28.0" prefWidth="35.0" text="+" textFill="#4274e1">
+                  <font>
+                     <Font size="14.0" />
+                  </font></Button>
                <Button layoutX="260.0" layoutY="413.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" />
+               <TextField layoutX="71.0" layoutY="14.0" onAction="#goToFindTravel" promptText="Buscar" />
+               <ListView layoutX="19.0" layoutY="135.0" prefHeight="258.0" prefWidth="287.0" />
+               <ListView layoutX="324.0" layoutY="135.0" prefHeight="258.0" prefWidth="268.0" />
          </children>
       </AnchorPane>
    </children>
