--- a/src/main/resources/views/payment/paymentDetails.fxml
+++ b/src/main/resources/views/payment/paymentDetails.fxml
@@ -53,7 +53,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="travel" disable="true" layoutX="250.0" layoutY="108.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="project" disable="true" layoutX="250.0" layoutY="108.0" prefWidth="150.0" />
             <Label alignment="CENTER" layoutX="42.0" layoutY="51.0" style="&#10;" text="Cliente" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
