--- a/src/main/resources/views/payment/paymentFind.fxml
+++ b/src/main/resources/views/payment/paymentFind.fxml
@@ -85,7 +85,7 @@
                </font>
             </Label>
             <TextField fx:id="name" layoutX="263.0" layoutY="45.0" promptText="Nombre del pasajero" />
-            <TextField fx:id="travel" layoutX="263.0" layoutY="82.0" promptText="Destino del viaje" />
+            <TextField fx:id="project" layoutX="263.0" layoutY="82.0" promptText="Destino del viaje" />
             <Label alignment="CENTER" layoutX="31.0" layoutY="174.0" style="&#10;" text="Cantidad" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
