--- a/src/main/resources/views/payment/paymentNew.fxml
+++ b/src/main/resources/views/payment/paymentNew.fxml
@@ -53,7 +53,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="travel" layoutX="251.0" layoutY="152.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="project" layoutX="251.0" layoutY="152.0" prefWidth="150.0" />
             <Label alignment="CENTER" layoutX="43.0" layoutY="95.0" style="&#10;" text="Cliente" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
