--- a/src/main/resources/views/travel/proyectHome.fxml
+++ b/src/main/resources/views/travel/proyectHome.fxml
@@ -9,7 +9,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -34,8 +36,24 @@
           </Menu>
         </menus>
       </MenuBar>
-      <AnchorPane prefHeight="582.0" prefWidth="699.0">
+      <AnchorPane VBox.vgrow="ALWAYS">
          <children>
+            <GridPane layoutY="53.0" prefHeight="476.0" prefWidth="940.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="53.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="189.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="386.0" minHeight="10.0" prefHeight="231.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="277.0" minHeight="10.0" prefHeight="266.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                     <TableView fx:id="projectList" onMouseClicked="#showCustomers" prefHeight="196.0" prefWidth="470.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                     <TableView fx:id="customerList" onMouseClicked="#showDetails" prefHeight="249.0" prefWidth="474.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS" />
+                     <TableView fx:id="customerDetails" prefHeight="385.0" prefWidth="470.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.vgrow="ALWAYS" />
+               </children>
+            </GridPane>
             <Label fx:id="label" alignment="CENTER" graphicTextGap="5.0" layoutX="643.0" layoutY="9.0" style="&#10;" text="Proyectos" textAlignment="CENTER" textFill="#225de8" textOverrun="CENTER_ELLIPSIS" wrapText="false" AnchorPane.rightAnchor="144.5" AnchorPane.topAnchor="9.0">
                <font>
                   <Font name="AdobeHebrew-Regular" size="32.0" />
@@ -44,18 +62,15 @@
                   <Bloom threshold="0.95" />
                </effect>
             </Label>
-            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToNewTravel" prefHeight="28.0" prefWidth="35.0" style="-fx-background-color: #1596F3;" text="+" textFill="WHITE" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToNewTravel" prefHeight="28.0" prefWidth="35.0" style="-fx-background-color: #1394FC;" text="+" textFill="WHITE" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
                   <font>
                      <Font size="14.0" />
                   </font>
                <effect>
                   <Bloom />
                </effect></Button>
-               <Button layoutX="436.0" layoutY="533.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" AnchorPane.bottomAnchor="14.0" />
+               <Button layoutX="436.0" layoutY="533.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="436.0" AnchorPane.rightAnchor="435.0" />
                <TextField layoutX="71.0" layoutY="14.0" onAction="#goToFindTravel" prefHeight="26.0" prefWidth="277.0" promptText="Buscar por nombre" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="14.0" />
-               <TableView fx:id="projectList" layoutX="14.0" layoutY="47.0" onMouseClicked="#showCustomers" prefHeight="212.0" prefWidth="437.0" AnchorPane.leftAnchor="14.0" />
-               <TableView fx:id="customerList" layoutX="14.0" layoutY="252.0" onMouseClicked="#showDetails" prefHeight="228.0" prefWidth="437.0" />
-               <TableView fx:id="customerDetails" layoutX="334.0" layoutY="49.0" prefHeight="457.0" prefWidth="392.0" AnchorPane.rightAnchor="25.0" />
          </children>
       </AnchorPane>
    </children>
