--- a/src/main/resources/views/travel/travelDetails.fxml
+++ b/src/main/resources/views/travel/travelDetails.fxml
@@ -68,7 +68,7 @@
                   <Bloom threshold="0.95" />
                </effect>
         </Label>
-            <DatePicker fx:id="departure" editable="false" layoutX="263.0" layoutY="126.0" promptText="Fecha de salida" />
+            <DatePicker fx:id="eta" editable="false" layoutX="263.0" layoutY="126.0" promptText="Fecha de salida" />
             <DatePicker fx:id="deadline" editable="false" layoutX="263.0" layoutY="161.0" promptText="Fecha limite de pago" />
             <Label alignment="CENTER" layoutX="31.0" layoutY="128.0" style="&#10;" text="Fecha de partida" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
