--- a/src/main/resources/views/contract/contractFound.fxml
+++ b/src/main/resources/views/contract/contractFound.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -14,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.SuccessController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.PassengerController">
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar VBox.vgrow="NEVER">
@@ -58,7 +59,7 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" graphicTextGap="5.0" layoutX="214.0" layoutY="163.0" style="&#10;" text="Guardado exitosamente" textAlignment="CENTER" textFill="#af1bc3" wrapText="false">
+        <Label alignment="CENTER" graphicTextGap="5.0" layoutX="221.0" layoutY="14.0" style="&#10;" text="Resultado de busqueda" textAlignment="CENTER" textFill="#2c0404" wrapText="false">
           <font>
             <Font size="18.0" />
           </font>
@@ -66,8 +67,8 @@
                   <Bloom threshold="0.95" />
                </effect>
         </Label>
-            <Button layoutX="278.0" layoutY="241.0" mnemonicParsing="false" onAction="#goToHome" text="Regresar" />
-
+            <Button layoutX="283.0" layoutY="292.0" mnemonicParsing="false" onAction="#goToHome" text="Regresar" />
+            <ListView fx:id="passengerList" layoutX="27.0" layoutY="68.0" onMouseClicked="#goToDetails" prefHeight="200.0" prefWidth="588.0" />
       </children>
     </AnchorPane>
   </children>
