--- a/src/main/resources/views/contract/contractHome.fxml
+++ b/src/main/resources/views/contract/contractHome.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.PassengerController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.ContractController">
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="600.0">
    <children>
       <MenuBar>
@@ -39,7 +39,7 @@
       </MenuBar>
       <AnchorPane prefHeight="493.0" prefWidth="600.0">
          <children>
-            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="343.0" layoutY="9.0" style="&#10;" text="Contrato" textAlignment="CENTER" textFill="#9a1083" textOverrun="CENTER_ELLIPSIS" wrapText="false">
+            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="343.0" layoutY="9.0" style="&#10;" text="Contratos" textAlignment="CENTER" textFill="#1653ee" textOverrun="CENTER_ELLIPSIS" wrapText="false">
                <font>
                   <Font name="AdobeHebrew-Regular" size="32.0" />
                </font>
@@ -49,19 +49,19 @@
             </Label>
             <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToNew" prefHeight="27.0" prefWidth="33.0" text="+" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
                <Button layoutX="269.0" layoutY="452.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" AnchorPane.bottomAnchor="13.5" AnchorPane.leftAnchor="269.0" AnchorPane.rightAnchor="257.5" />
-               <TextField layoutX="60.0" layoutY="15.0" onAction="#goToFind" prefHeight="27.0" prefWidth="232.0" promptText="contrato" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="15.0" />
+               <TextField layoutX="60.0" layoutY="15.0" onAction="#goToFind" prefHeight="27.0" prefWidth="232.0" promptText="Buscar contrato" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="15.0" />
                <GridPane layoutY="61.0" prefHeight="316.0" prefWidth="600.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                  </columnConstraints>
                  <rowConstraints>
-                   <RowConstraints maxHeight="160.0" minHeight="0.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                   <RowConstraints maxHeight="329.0" minHeight="10.0" prefHeight="212.0" vgrow="SOMETIMES" />
-                   <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="101.0" vgrow="SOMETIMES" />
+                   <RowConstraints maxHeight="160.0" minHeight="0.0" prefHeight="18.0" vgrow="SOMETIMES" />
+                   <RowConstraints maxHeight="329.0" minHeight="10.0" prefHeight="282.0" vgrow="SOMETIMES" />
+                   <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
                  </rowConstraints>
                   <children>
-                     <TableView prefHeight="290.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+                     <TableView prefHeight="299.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
                   </children>
                </GridPane>
          </children>
