--- a/src/main/resources/views/payment/paymentHome.fxml
+++ b/src/main/resources/views/payment/paymentHome.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -14,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.PaymentController">
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="600.0">
    <children>
       <MenuBar>
         <menus>
@@ -37,7 +39,7 @@
       </MenuBar>
       <AnchorPane prefHeight="493.0" prefWidth="600.0">
          <children>
-            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="253.0" layoutY="38.0" style="&#10;" text="Pagos" textAlignment="CENTER" textFill="#9a1083" textOverrun="CENTER_ELLIPSIS" wrapText="false">
+            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="343.0" layoutY="9.0" style="&#10;" text="Pagos" textAlignment="CENTER" textFill="#1653ee" textOverrun="CENTER_ELLIPSIS" wrapText="false">
                <font>
                   <Font name="AdobeHebrew-Regular" size="32.0" />
                </font>
@@ -45,9 +47,23 @@
                   <Bloom threshold="0.95" />
                </effect>
             </Label>
-            <Button layoutX="83.0" layoutY="202.0" mnemonicParsing="false" onAction="#goToNewPayment" prefHeight="89.0" prefWidth="173.0" text="Capturar pago" />
-               <Button layoutX="347.0" layoutY="202.0" mnemonicParsing="false" onAction="#goToFindPayment" prefHeight="89.0" prefWidth="173.0" text="Buscar Pago" />
-               <Button layoutX="271.0" layoutY="397.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" />
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToNew" prefHeight="27.0" prefWidth="33.0" text="+" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
+               <Button layoutX="269.0" layoutY="452.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" AnchorPane.bottomAnchor="13.5" AnchorPane.leftAnchor="269.0" AnchorPane.rightAnchor="257.5" />
+               <TextField layoutX="60.0" layoutY="15.0" onAction="#goToFind" prefHeight="27.0" prefWidth="232.0" promptText="Buscar Pago" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="15.0" />
+               <GridPane layoutY="61.0" prefHeight="316.0" prefWidth="600.0">
+                 <columnConstraints>
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                 </columnConstraints>
+                 <rowConstraints>
+                   <RowConstraints maxHeight="160.0" minHeight="0.0" prefHeight="18.0" vgrow="SOMETIMES" />
+                   <RowConstraints maxHeight="329.0" minHeight="10.0" prefHeight="282.0" vgrow="SOMETIMES" />
+                   <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
+                 </rowConstraints>
+                  <children>
+                     <TableView prefHeight="299.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+                  </children>
+               </GridPane>
          </children>
       </AnchorPane>
    </children>
