--- a/src/main/resources/views/contract/contractNew.fxml
+++ b/src/main/resources/views/contract/contractNew.fxml
@@ -2,11 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -40,7 +40,7 @@
       </MenuBar>
       <AnchorPane prefHeight="493.0" prefWidth="600.0">
          <children>
-            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="230.0" layoutY="14.0" style="&#10;" text="Crear Cliente" textAlignment="CENTER" textFill="#2c0404" wrapText="false">
+            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="230.0" layoutY="14.0" style="&#10;" text="Crear Contrato" textAlignment="CENTER" textFill="#2c0404" wrapText="false">
                <font>
                   <Font size="18.0" />
                </font>
@@ -53,50 +53,35 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="42.0" layoutY="51.0" style="&#10;" text="Nombre" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+            <Label alignment="CENTER" layoutX="42.0" layoutY="157.0" style="&#10;" text="Cliente" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="42.0" layoutY="123.0" style="&#10;" text="Telefono" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+            <Label alignment="CENTER" layoutX="42.0" layoutY="223.0" style="&#10;" text="Descuento" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="46.0" layoutY="157.0" style="&#10;" text="Correo electronico" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+            <Label alignment="CENTER" layoutX="48.0" layoutY="280.0" style="&#10;" text="Fecha Limite" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="46.0" layoutY="186.0" style="&#10;" text="Dirección" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="51.0" layoutY="343.0" style="&#10;" text="Notas" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="49.0" layoutY="283.0" style="&#10;" text="Equipo de venta" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <TextField fx:id="name" layoutX="250.0" layoutY="49.0" promptText="Nombre completo" />
             <ChoiceBox fx:id="project" layoutX="250.0" layoutY="83.0" prefWidth="150.0" />
-            <TextField fx:id="phone" layoutX="250.0" layoutY="121.0" promptText="Número de telefono" />
-            <TextField fx:id="email" layoutX="250.0" layoutY="155.0" promptText="eMail" />
-            <TextField fx:id="addressStreet" layoutX="250.0" layoutY="184.0" promptText="Calle" />
-            <TextField fx:id="addressColony" layoutX="423.0" layoutY="184.0" promptText="Colonia" />
-            <TextField fx:id="addressCity" layoutX="250.0" layoutY="219.0" promptText="Ciudad" />
-            <TextField fx:id="addressPC" layoutX="423.0" layoutY="219.0" promptText="CP" />
-            <ChoiceBox fx:id="staff" layoutX="250.0" layoutY="281.0" prefWidth="150.0" />
-            <TextArea fx:id="notes" layoutX="245.0" layoutY="343.0" prefHeight="71.0" prefWidth="345.0" />
+            <TextField fx:id="discount" layoutX="250.0" layoutY="221.0" promptText="Descuento" />
             <Button layoutX="371.0" layoutY="440.0" mnemonicParsing="false" onAction="#save" text="Guardar" />
             <Button layoutX="261.0" layoutY="440.0" mnemonicParsing="false" onAction="#clearScreen" text="Limpiar" />
             <Button layoutX="146.0" layoutY="440.0" mnemonicParsing="false" onAction="#goToHome" text="Cancelar" />
                <Label fx:id="message" layoutX="269.0" layoutY="470.0" textFill="#e40c0c" />
+               <ChoiceBox fx:id="customer" layoutX="250.0" layoutY="155.0" prefWidth="150.0" />
+               <Label alignment="CENTER" layoutX="49.0" layoutY="331.0" style="&#10;" text="Periodo de pago" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+                  <font>
+                     <Font size="18.0" />
+                  </font>
+               </Label>
+               <ChoiceBox fx:id="paymentSchedule" layoutX="250.0" layoutY="329.0" prefWidth="150.0" />
+               <DatePicker fx:id="deadline" layoutX="250.0" layoutY="278.0" promptText="Fecha limite" />
          </children>
       </AnchorPane>
    </children>
