--- a/src/main/resources/views/contract/contractNew.fxml
+++ b/src/main/resources/views/contract/contractNew.fxml
@@ -68,13 +68,13 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="project" layoutX="250.0" layoutY="83.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="projectId" layoutX="250.0" layoutY="83.0" prefWidth="150.0" />
             <TextField fx:id="discount" layoutX="250.0" layoutY="221.0" promptText="Descuento" />
             <Button layoutX="371.0" layoutY="440.0" mnemonicParsing="false" onAction="#save" text="Guardar" />
             <Button layoutX="261.0" layoutY="440.0" mnemonicParsing="false" onAction="#clearScreen" text="Limpiar" />
             <Button layoutX="146.0" layoutY="440.0" mnemonicParsing="false" onAction="#goToHome" text="Cancelar" />
                <Label fx:id="message" layoutX="269.0" layoutY="470.0" textFill="#e40c0c" />
-               <ChoiceBox fx:id="customer" layoutX="250.0" layoutY="155.0" prefWidth="150.0" />
+               <ChoiceBox fx:id="customerId" layoutX="250.0" layoutY="155.0" prefWidth="150.0" />
                <Label alignment="CENTER" layoutX="49.0" layoutY="331.0" style="&#10;" text="Periodo de pago" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                   <font>
                      <Font size="18.0" />
